--- a/web/ReactNativeSwap/ios/aelfAccount/Info.plist
+++ b/web/ReactNativeSwap/ios/aelfAccount/Info.plist
@@ -21,7 +21,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>20200818437</string>
+	<string>20200822439</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
