--- a/web/ReactNativeSwap/package.json
+++ b/web/ReactNativeSwap/package.json
@@ -32,6 +32,7 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "aelf-sdk": "^3.2.34",
+    "axios": "^0.19.2",
     "buffer": "^5.6.0",
     "expo-barcode-scanner": "^8.2.1",
     "expo-image-picker": "^8.3.0",
