--- a/web/ReactNativeSwap/package.json
+++ b/web/ReactNativeSwap/package.json
@@ -39,6 +39,7 @@
     "expo-local-authentication": "9.0.0",
     "expo-localization": "^8.2.1",
     "expo-location": "^8.3.0",
+    "expo-screen-orientation": "^1.1.1",
     "i18n-js": "^3.7.1",
     "moment": "^2.27.0",
     "ramda": "^0.27.0",
