--- a/web/ReactNativeSwap/ios/Podfile
+++ b/web/ReactNativeSwap/ios/Podfile
@@ -1,5 +1,7 @@
 platform :ios, '10.0'
 
+source 'https://github.com/CocoaPods/Specs.git'
+
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 require_relative'../node_modules/react-native-unimodules/cocoapods.rb' 
 
