--- a/web/ReactNativeSwap/package.json
+++ b/web/ReactNativeSwap/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "cd ios && pod update Firebase/CoreOnly && cd ..",
+    "eslintInstall": "cp .hooks/* ../../.git/hooks/ && chmod u+x ../../.git/hooks/*",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
