--- a/web/ReactNativeSwap/package.json
+++ b/web/ReactNativeSwap/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "postinstall": "cp .hooks/* ../../.git/hooks/ && chmod u+x ../../.git/hooks/*",
+    "postinstall": "cd ios && pod update Firebase/CoreOnly && cd ..",
+    "eslintInstall": "cp .hooks/* ../../.git/hooks/ && chmod u+x ../../.git/hooks/*",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
