--- a/web/ReactNativeSwap/package.json
+++ b/web/ReactNativeSwap/package.json
@@ -45,6 +45,7 @@
     "ramda": "^0.27.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-flipper": "^0.67.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-random-values": "^1.4.0",
@@ -63,6 +64,7 @@
     "react-native-webview": "^10.3.2",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "redux-flipper": "^1.4.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reduxsauce": "^1.1.3",
