--- a/web/ReactNativeSwap/package.json
+++ b/web/ReactNativeSwap/package.json
@@ -48,6 +48,7 @@
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-random-values": "^1.4.0",
+    "react-native-image-picker": "^3.1.4",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "^1.9.0",
